--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           />
     </div>
     <!-- bảng chào mừng -->
-    <section id="pgdangky" class="hiddenm">
+    <section id="pgdangky" class="hidden">
       <h1
         id="tieudeform"
         class="tieude"
