--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           />
     </div>
     <!-- bảng chào mừng -->
-    <section id="pgdangky" class="hidden">
+    <section id="pgdangky" class="hiddenm">
       <h1
         id="tieudeform"
         class="tieude"
@@ -93,6 +93,9 @@
           <br>
           <label for="idphuongtien">Phương tiện:</label>
           <input id="idphuongtien" class="nhaplieu" type="text" style="width:298px;margin-top: 3px" placeholder="Loại xe - biển số"></input>
+          <br>
+          <label for="iddiadiem">Địa điểm đến:</label>
+          <input id="iddiadiem" class="nhaplieu" type="text" style="width:292px;margin-top: 3px" placeholder="Địa điểm"></input>
           <br>
           <label for="idghichu">Ghi chú:</label>
           <input id="idghichu" class="nhaplieu" type="text" style="width:326px;margin-top: 3px" placeholder="Lưu ý"></input>
