--- a/index.html
+++ b/index.html
@@ -175,11 +175,12 @@
                   <input class="nhaplieu" type="text" style="width:380px" readonly></input>
                   <br><input class="nhaplieu" type="text" style="width:380px" readonly></input>
                   <br><input class="nhaplieu" type="text" style="width:380px" readonly></input>
+                  <br><input class="nhaplieu" type="text" style="width:380px" readonly></input>
                 </div>  
                 <div style="padding-top:10px">  
                   <label>Trưởng bộ phận:</label>
                   <input class="nhaplieu" style="width:68%" type="text" readonly></input>
-                  <br><label>Phòng HCNS:</label>
+                  <br><label>Xác nhận:</label>
                   <input class="nhaplieu" style="width:72%" type="text" readonly></input>
                   <br><label>Giám đốc:</label>
                   <input class="nhaplieu" style="width:78%" type="text" readonly></input>
