--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div style="padding-top:10px">  
                   <label>Trưởng bộ phận:</label>
                   <input class="nhaplieu" style="width:68%" type="text" readonly></input>
-                  <br><label>Xác nhận:</label>
+                  <br><label>Phó Giám đốc:</label>
                   <input class="nhaplieu" style="width:72%" type="text" readonly></input>
                   <br><label>Giám đốc:</label>
                   <input class="nhaplieu" style="width:78%" type="text" readonly></input>
