--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
                     class="nhaplieu"
                     type="text"
                     id="matracuu"
-                    placeholder="Mã nhân viên"
+                    placeholder="Mã NV"
                     size="7"
                     height="50px"
                   />
                   <input type="date" id="ngaytracuu" class="nhaplieu" />
-                  <button id="btnkiemtra" Style="width:75px;height: 28px;margin-left: 5px;font-size: 15px">Mang ra</button><br />
-                  <button id="btnktravao" Style="width:85px;height: 28px;margin-left: 5px;font-size: 15px">Mang vào</button><br />
+                  <button id="btnkiemtra" Style="width:75px;height: 28px;margin-left: 5px;font-size: 13px">Mang ra</button><br />
+                  <button id="btnktravao" Style="width:85px;height: 28px;margin-left: 5px;font-size: 13px">Mang vào</button><br />
                 </div>
             </div>
               <!-- <p>trả ra kết quả đăng ký</p> -->
