--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Đăng Ký mang vật tư ra ngoài</title>
+    <title>Đăng Ký mang vật tư Ra Vào</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="./src/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
