--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           font-size: 20px
         "
       >
-        ĐĂNG KÝ MANG TÀI SẢN RA NGOÀI
+        ĐĂNG KÝ MANG TÀI SẢN RA - VÀO
       </h1>
 
       <form id="formdk" class="forminput">
